--- a/Frontend/templates/base.html
+++ b/Frontend/templates/base.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- 1. Load libraries -->
+    <!-- IE required polyfills, in this exact order -->
+    {{ static  }}
+    <script src="{% static "node_modules/es6-shim/es6-shim.min.js" %}"></script>
+    <script src="{% static "node_modules/systemjs/dist/system-polyfills.js" %}"></script>
+    <script src="{% static "node_modules/angular2/es6/dev/src/testing/shims_for_IE.js" %}"></script>
+
+    <script src="{% static "node_modules/angular2/bundles/angular2-polyfills.js" %}"></script>
+    <script src="{% static "node_modules/systemjs/dist/system.src.js" %}"></script>
+    <script src="{% static "node_modules/rxjs/bundles/Rx.js" %}"></script>
+    <script src="{% static "node_modules/angular2/bundles/angular2.dev.js" %}"></script>
+     <script>
+      System.config({
+        packages: {
+          app: {
+            format: 'register',
+            defaultExtension: 'js'
+          }
+        }
+      });
+      System.import('app/main')
+            .then(null, console.error.bind(console));
+    </script>
 </head>
 <body>
-    {% block content %}{% endblock %}
+    {% block content %}<my-app>Loading...</my-app>{% endblock %}
 </body>
 </html>
